--- a/views/game.ejs
+++ b/views/game.ejs
@@ -6,6 +6,15 @@
     <title>Campo de Tiro</title>
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HM3P74Y32W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HM3P74Y32W');
+</script>
     <style>
         body {
             background-image: url('/images/diana.jpg');
