--- a/views/characters/edit.ejs
+++ b/views/characters/edit.ejs
@@ -6,6 +6,15 @@
     <title>Editar Arma</title>
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HM3P74Y32W"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-HM3P74Y32W');
+    </script>
     <style>
         body {
             background-image: url('/images/editar.jpg');
@@ -55,7 +64,8 @@
     </style>
 </head>
 <body>
-   
+
+</script>
         <h1>Editar Arma</h1>
         <form action="/characters/<%= character.id %>/update" method="post">
             
