--- a/views/map.ejs
+++ b/views/map.ejs
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mapa</title>
     <link rel="stylesheet" href="/styles/map.css"> <!-- Asegúrate de crear este archivo CSS -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HM3P74Y32W"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-HM3P74Y32W');
+    </script>
 </head>
 <body>
     <div id="map-container">
