--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="/css/user.css">
     <title>Registro</title>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HM3P74Y32W"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TRTXEJKV1F"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'G-HM3P74Y32W');
+        gtag('config', 'G-TRTXEJKV1F');
     </script>
 </head>
 <body>
