--- a/views/characters/create.ejs
+++ b/views/characters/create.ejs
@@ -7,13 +7,13 @@
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HM3P74Y32W"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4PLJYD0JZD"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-    gtag('config', 'G-HM3P74Y32W');
+    gtag('config', 'G-4PLJYD0JZD');
 </script>
     <style>
         body {
